<resources>
    <string name="app_name" translatable="false">Tier List Maker</string>
    <string name="app_language">en</string>

    <!-- region General -->
    <string name="btn_cancel">Cancel</string>
    <!-- endregion General -->

    <!-- region HomeActivity -->
    <string name="menu_item_collection_title">My Collection</string>
    <string name="menu_item_settings_title">Settings</string>
    <string name="menu_item_hints_title">Hints</string>
    <string name="menu_item_feedback_title">Feedback</string>
    <string name="menu_item_about_title">About</string>
    <string name="btn_change_theme_desc">Change theme</string>
    <!-- endregion HomeActivity -->

    <!-- region CollectionFragment -->
    <string name="btn_add_new_list_desc">Add new list</string>
    <string name="empty_previews_message">There\’s nothing yet. Create your first tier list!</string>
    <string name="load_previews_error_message">Oops! Something went wrong…\nUnable to load your collection</string>
    <string name="btn_report_issue"><u>Report the issue</u></string>
    <string name="save_tier_list_error_message">Oops! Unable to save tier list :(</string>
    <string name="remove_tier_list_error_message">Oops! Unable to remove tier list :(</string>
    <string name="update_tier_lists_error_message">Oops! Unable to update tier lists :(</string>
    <string name="btn_refresh">Refresh</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="remove_tier_list_confirmation_title">Are you sure you want to remove tier list \“%s\”?</string>
    <string name="no_tier_lists_found_message">No tier lists found. Create your first tier list to unlock hints</string>
    <!-- endregion CollectionFragment -->

    <!-- region TierListFragment -->
    <string name="menu_item_rename_tier_list_title">Rename tier list</string>
    <string name="menu_item_remove_image_title">Remove image</string>
    <string name="toolbar_subtitle_determinate_loading">Loading (%1$d/%2$d)</string>
    <string name="toolbar_subtitle_indeterminate_loading">Loading…</string>
    <string name="toolbar_subtitle_release_to_remove_image">Release to remove image</string>
    <string name="btn_add_new_image_desc">Add new image</string>
    <string name="btn_zoom_in_desc">Zoom in</string>
    <string name="btn_zoom_out_desc">Zoom out</string>
    <string name="btn_add_new_tier_desc">Add new tier</string>
    <string name="btn_view_desc">View</string>
    <string name="btn_share_desc">Share</string>
    <string name="snackbar_msg_no_image_picker_apps_found">Unable to pick images. No suitable applications found</string>
    <string name="snackbar_msg_share_file_error">Unable to share tier list. Failed to create image file</string>
    <string name="snackbar_msg_no_share_apps_found">Unable to share tier list. No suitable applications found</string>
    <string name="snackbar_msg_view_file_error">Unable to view tier list. Failed to create image file</string>
    <string name="snackbar_msg_no_view_apps_found">Unable to view tier list. No suitable applications found</string>
    <string name="snackbar_msg_image_removed">Image removed</string>
    <string name="snackbar_action_restore">Restore</string>
    <!-- endregion TierListFragment -->

    <!-- region EnterTierListTitleDialog -->
    <string name="dialog_title_name_tier_list">Enter tier list name:</string>
    <string name="dialog_title_rename_tier_list">Enter new tier list name:</string>
    <string name="hint_tier_list_name">Tier List Name</string>
    <string name="btn_confirm">Confirm</string>
    <!-- endregion EnterTierListTitleDialog -->

    <!-- region FeedbackUtils -->
    <string name="bug_report_email_subject">Tier List Maker: Bug report</string>
    <string name="bug_report_info_version">App version: %s</string>
    <string name="bug_report_info_device">Device: %s</string>
    <string name="bug_report_info_os">OS: Android %s</string>
    <string name="send_us_email_alert_title">Please send email to %s</string>
    <string name="btn_copy_email">Copy email</string>
    <string name="toast_msg_text_copied">Copied \“%s\”</string>
    <string name="send_feedback_email_subject">Tier List Maker: Feedback</string>
    <!-- endregion FeedbackUtils -->

    <!-- region FeedbackFragment -->
    <string name="feedback_appbar_title">Feedback</string>
    <string name="pref_contact_us_key" translatable="false">contact_us</string>
    <string name="pref_contact_us_title">Contact us</string>
    <string name="pref_contact_us_summary">Tell us about your experience, suggest new features and help us improve</string>
    <string name="pref_report_bug_key" translatable="false">report_bug</string>
    <string name="pref_report_bug_title">Report bug</string>
    <string name="pref_report_bug_summary">Report technical issues, crashes or any other problems you\’ve faced</string>
    <string name="pref_rate_app_key" translatable="false">rate_app</string>
    <string name="pref_rate_app_title">Rate app</string>
    <string name="pref_rate_app_summary">Enjoyed Tier List Maker? Let others know by rating it and writing a review!</string>
    <string name="snackbar_msg_no_rate_apps_found">Unable to rate Tier List Maker. No suitable applications found</string>
    <!-- endregion FeedbackFragment -->

    <!-- region SettingsFragment -->
    <string name="settings_appbar_title">Settings</string>
    <string name="pref_tiers_count_key" translatable="false">tiers_count</string>
    <string name="pref_tiers_count_title">Initial number of tiers</string>
    <string name="pref_tiers_count_summary">How many tiers will be added when you create a new list</string>
    <string name="pref_scale_key" translatable="false">scale</string>
    <string name="pref_scale_title">Default scale</string>
    <string name="pref_scale_summary">How many images will fit in a row inside a tier (affects only new lists)</string>
    <string name="pref_image_quality_key" translatable="false">image_quality</string>
    <string name="pref_image_quality_title">Image quality</string>
    <string name="pref_image_quality_summary">Higher percent - better quality, lower percent - takes less memory in storage</string>
    <!-- endregion SettingsFragment -->

    <!-- region AboutFragment -->
    <string name="about_appbar_title">About</string>
    <string name="pref_app_info_key" translatable="false">app_info</string>
    <string name="pref_app_info_title">About app</string>
    <string name="pref_app_info_summary">Tier List Maker is an Android application that allows to create, edit and share tier lists.\n\nFeatures:\n• Сreate and edit tier lists\n• Upload images from device storage\n• Choose between light and dark theme\n• Share tier list as image file</string>
    <string name="pref_app_version_key" translatable="false">app_version</string>
    <string name="pref_app_version_title">App version</string>
    <!-- endregion AboutFragment -->

    <!-- region HintsFragment -->
    <string name="hints_appbar_title">Hints</string>
    <string name="pref_collection_hints_category_title">Collection hints</string>
    <string name="pref_reorder_tier_lists_hint_key" translatable="false">reorder_tier_lists_hint</string>
    <string name="pref_reorder_tier_lists_hint_title">How to reorder tier lists?</string>
    <string name="pref_add_new_tier_list_hint_key" translatable="false">add_new_tier_list_hint</string>
    <string name="pref_add_new_tier_list_hint_title">How to add a new tier list?</string>
    <string name="pref_remove_tier_lists_hint_key" translatable="false">remove_tier_lists_hint</string>
    <string name="pref_remove_tier_list_hint_title">How to remove a tier list?</string>
    <string name="pref_tier_list_hints_category_title">Tier list hints</string>
    <string name="pref_reorder_tiers_hint_key" translatable="false">reorder_tiers_hint</string>
    <string name="pref_reorder_tiers_hint_title">How to reorder tiers?</string>
    <string name="pref_remove_tier_list_image_hint_key" translatable="false">remove_tier_list_image_hint</string>
    <string name="pref_remove_tier_list_image_hint_title">How to remove an image?</string>
    <string name="pref_remove_tier_hint_key" translatable="false">remove_tier_hint</string>
    <string name="pref_remove_tier_hint_title">How to remove a tier?</string>
    <!-- endregion HintsFragment -->

    <!-- region DefaultTierListCollectionProvider -->
    <string name="tier_list_animals">Animals</string>
    <string name="tier_list_fast_food">Fast food</string>
    <string name="tier_list_flowers">Flowers</string>
    <string name="tier_list_fruits">Fruits</string>
    <string name="tier_list_musical_instruments">Musical instruments</string>
    <string name="tier_list_mythical_creatures">Mythical creatures</string>
    <string name="tier_list_school_subjects">School subjects</string>
    <string name="tier_list_sports">Sports</string>
    <string name="tier_list_vehicles">Vehicles</string>
    <string name="tier_list_zodiac_signs">Zodiac signs</string>
    <!-- endregion DefaultTierListCollectionProvider -->

    <!-- region HintOverlayView -->
    <string name="btn_close_desc">Close</string>
    <string name="btn_previous_desc">Previous</string>
    <string name="btn_next_desc">Next</string>
    <!-- endregion HintOverlayView -->

    <!-- region CollectionHintGroup -->
    <string name="hint_add_new_tier_list">Click on the \“+\” button in the bottom-right corner in order to add a new tier list</string>
    <string name="hint_remove_tier_list">Swipe the card from left to right in order to remove the tier list</string>
    <string name="hint_reorder_tier_lists">Long press on the card, then move it up or down in order to reorder tier lists</string>
    <!-- endregion CollectionHintGroup -->

    <!-- region TierListHintGroup -->
    <string name="hint_remove_image">Drag the image onto the trash bin icon in the top-right corner in order to remove it</string>
    <string name="hint_remove_tier">Swipe the tier header from left to right in order to remove the tier</string>
    <string name="hint_reorder_tiers">Long press on the tier header, then move it up or down in order to reorder tiers</string>
    <!-- endregion TierListHintGroup -->
</resources>