<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/fragment_collection"
        android:icon="@drawable/ic_folder"
        android:title="@string/menu_item_collection_title" />

    <item
        android:id="@+id/fragment_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_item_settings_title" />

    <item
        android:id="@+id/fragment_hints"
        android:icon="@drawable/ic_lightbulb"
        android:title="@string/menu_item_hints_title" />

    <item
        android:id="@+id/fragment_feedback"
        android:icon="@drawable/ic_forum"
        android:title="@string/menu_item_feedback_title" />

    <item
        android:id="@+id/fragment_about"
        android:icon="@drawable/ic_info"
        android:title="@string/menu_item_about_title" />

</menu>